# million_search

./: Cargo.toml  README.md  compose.yaml  meilisync_config.yml  postgres.Dockerfile  todo.md
million_admin_cli/: Cargo.toml
million_admin_cli/src/: main.rs
million_admin_client/: Cargo.toml
million_backend/: .env  Cargo.toml  Dockerfile  sea-orm commands.sh
million_backend/entity/: Cargo.toml
million_backend/entity/src/: audio.rs  crawler_queue.rs  image.rs  lib.rs  manifest.rs  prelude.rs  sea_orm_active_enums.rs  search_history.rs  video.rs  websites.rs
million_backend/migration/: Cargo.toml
million_backend/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20240505_025740_more_types.rs  m20240507_052759_meilisync.rs  m20240507_082145_search_history.rs  m20240512_232002_manifest.rs
million_backend/src/: admin.rs  crawler.rs  main.rs  search.rs
million_client/: .gitignore  Cargo.toml  Dockerfile  package-lock.json  package.json  pnpm-lock.yaml
million_client/src/: home.rs  main.rs  search.rs  utils.rs
million_crawler/: Cargo.toml
million_crawler/src/: main.rs  selector_set.rs
proto/: Cargo.toml  build.rs
proto/proto/: admin.proto  crawler.proto  search.proto
proto/src/: lib.rs
