[package]
name = "million_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = "0.12.15"
tonic = "0.11.0"
proto = { path = "../proto" }
anyhow = { version = "1.0.82", features = ["backtrace"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["full"] }
amqprs = "1.6.0"
