[package]
name = "million_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "0.12.15", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
] }
proto = { path = "../proto" }
anyhow = { version = "1.0.82", features = ["backtrace"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["full"] }
dotenvy = "0.15.7"
entity = { path = "entity" }
migration = { path = "migration" }
chrono = "0.4.38"
url = "2.5.0"
meilisearch-sdk = "0.25.0"
serde = { version = "1.0.200", features = ["derive"] }
