[package]
name = "million_crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.12.4"
scraper = { version = "0.19.0", features = ["atomic"] }
tokio = { version = "1.37.0", features = ["full"] }
proto = { path = "../proto" }
anyhow = { version = "1.0.82", features = ["backtrace"] }
url = "2.5.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
exponential-backoff = "1.2.0"
clap = { version = "4.5.4", features = ["derive", "env"] }
lazy_static = "1.4.0"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
futures = "0.3.30"
image = "0.25.1"
svg = "0.17.0"
